--- a/publications.html
+++ b/publications.html
@@ -128,7 +128,7 @@
 [<a href="publications/melanges/JRSSB supp material.pdf">supplement</a>, <a href="publications/melanges/JRSSB Replication Material.zip">replication files</a>]
 
 <br><br>
-<a href="publications/spj/MS14366manuscript.pdf">Split-panel jackknife estimation of fixed-effect models</a>.
+<a href="publications/spj/spj.pdf">Split-panel jackknife estimation of fixed-effect models</a>.
 <i>Review of Economic Studies</i> 82, 991–1030. (with Geert Dhaene)
 
 [<a href="publications/spj/Webappendix.pdf">supplement</a>, <a href="publications/spj/Replication Material.zip">replication files</a>, <a href="https://ideas.repec.org/c/boc/bocode/s458651.html">Stata implementation</a>]
