--- a/implementation.html
+++ b/implementation.html
@@ -44,6 +44,9 @@
 <a href="https://ideas.repec.org/c/boc/bocode/s458754.html">rassign</a>
 <br> A Stata routine to implement a regression-based test for random assignment to peer groups, or for the presence of endogenous peer effects in the linear-in-means model (given exogeneity of the network structure).
 
+<br><br>
+<a href="preprints/peer effects/ivnet.zip">ivnet</a>
+<br> A Stata routine to implement a two-stage least-squares estimator for the linear-in-means model that allows for peer groups to be endogenous. The command requires the user to provide adjacency matrices. See the help file for details.
 
 <br><br>
 <a href="https://ideas.repec.org/c/boc/bocode/s458642.html">xtserialpm</a> 
