--- a/preprints.html
+++ b/preprints.html
@@ -40,7 +40,7 @@
 
 
 <p>
-<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. [<a href="preprints/peer effects/matlab.zip">replication files</a>]
+<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. [<a href="preprints/peer effects/matlab.zip">replication files</a>, <a href="preprints/peer effects/ivnet.zip">Stata implementation</a>, <a href="preprints/peer effects/dgp.do">dgp.do for Stata help file</a>]
 
 
 <br><br>
