typo corrected in ivnet description

--- a/implementation.html
+++ b/implementation.html
@@ -46,7 +46,7 @@
 
 <br><br>
 <a href="preprints/peer effects/ivnet.zip">ivnet</a>
-<br> A Stata routine to implement a two-stage least-squares estimator for the linear-in-means model that allows for peer groups to be endogenous. The command requires the user to provide adjacency matrices. See the help file for details.
+<br> A Stata routine to implement a 2sls estimator for the linear-in-means model that allows for peer groups to be endogenous. The command requires the user to provide adjacency matrices. See the help file for details.
 
 <br><br>
 <a href="https://ideas.repec.org/c/boc/bocode/s458642.html">xtserialpm</a> 
