--- a/preprints.html
+++ b/preprints.html
@@ -26,10 +26,11 @@
 
 <p class="view"><a href="http://jochmans.github.io/">Home</small></a></p>
 <p class="view"><a href="cv/CV.pdf">Curriculum vitae</a></p>
-<p class="view"><a href="publications.html">Published papers</a></p>
+<p class="view"><a href="publications.html">Publications</a></p>
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
 <p class="view"><a href="https://www.econ.cam.ac.uk/MiMo">ERC Starting Grant MiMo</a></p>
+<p class="view"><a href="classes.html">Class notes</a></p>
 
 </header>
       
@@ -40,7 +41,7 @@
 
 
 <p>
-<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. [<a href="preprints/peer effects/matlab.zip">replication files</a>, <a href="preprints/peer effects/ivnet.zip">Stata implementation</a>, <a href="preprints/peer effects/DGP.do">dgp.do for Stata help file</a>]
+<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. Under revision for <i>Journal of Econometrics</i>. [<a href="preprints/peer effects/matlab.zip">replication files</a>, <a href="preprints/peer effects/ivnet.zip">Stata implementation</a>, <a href="preprints/peer effects/DGP.do">dgp.do for Stata help file</a>]
 
 
 <br><br>
