--- a/publications.html
+++ b/publications.html
@@ -26,10 +26,11 @@
 
 <p class="view"><a href="http://jochmans.github.io/">Home</small></a></p>
 <p class="view"><a href="cv/CV.pdf">Curriculum vitae</a></p>
-<p class="view"><a href="publications.html">Published papers</a></p>
+<p class="view"><a href="publications.html">Publications</a></p>
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
 <p class="view"><a href="https://www.econ.cam.ac.uk/MiMo">ERC Starting Grant MiMo</a></p>
+<p class="view"><a href="classes.html">Class notes</a></p>
 
 </header>
       
@@ -45,6 +46,10 @@
 
 [<a href="publications/many regressors/many regressors supplement.pdf">supplement</a>,
 <a href="publications/many regressors/many regressors [replication].zip">replication files</a>]
+
+<br><br>
+<a href="publications/ivpoisson/ivpoisson.pdf">Bias in instrumental-variable estimators of fixed-effect models for count data</a>.
+<i>Economics Letters</i>, forthcoming.
 
 <br><br>
 <a href="publications/portmanteau/serial correlation.pdf">A portmanteau test for correlation in short panels</a>.
