--- a/implementation.html
+++ b/implementation.html
@@ -26,10 +26,11 @@
 
 <p class="view"><a href="http://jochmans.github.io/">Home</small></a></p>
 <p class="view"><a href="cv/CV.pdf">Curriculum vitae</a></p>
-<p class="view"><a href="publications.html">Published papers</a></p>
+<p class="view"><a href="publications.html">Publications</a></p>
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
 <p class="view"><a href="https://www.econ.cam.ac.uk/MiMo">ERC Starting Grant MiMo</a></p>
+<p class="view"><a href="classes.html">Class notes</a></p>
 
 
 </header>
