update with markov mixtures

--- a/classes.html
+++ b/classes.html
@@ -41,8 +41,8 @@
 
 
 <p>
-Advanced Econometric Methods
-<br> MRes in Economics, University of Cambridge (Last revised on November 25, 2020)
+Advanced Econometric Methods, MRes in Economics, University of Cambridge 
+
 
 <br>
 <a href="class notes/R300/slides.pdf">Lecture slides</a>
@@ -71,18 +71,14 @@ Advanced Econometric Methods
 
 
 <br><br>
-Difference and differential equations
-<br>
-MRes Prep Class, University of Cambridge (Last revised on September 23, 2020)
+Difference and differential equations, MRes Prep Class, University of Cambridge 
 
 <br>
 <a href="class notes/Diff equations/slides.pdf">Lecture slides</a>
 
 
 <br><br>
-Nonlinear Models for Panel Data
-<br>
-PhD, University of Cambridge (Last revised on January 15, 2018)
+Nonlinear Models for Panel Data, PhD, University of Cambridge 
 
 <br>
 <a href="class notes/PhD30/slides.pdf">Lecture slides</a>
