--- a/preprints.html
+++ b/preprints.html
@@ -41,6 +41,9 @@
 
 
 <p>
+<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. (with Ayden Higgins)
+
+<br><br>
 <a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. Under revision for <i>Journal of Econometrics</i>. [<a href="preprints/peer effects/matlab.zip">replication files</a>, <a href="preprints/peer effects/ivnet.zip">Stata implementation</a>, <a href="preprints/peer effects/DGP.do">dgp.do for Stata help file</a>]
 
 
