--- a/preprints.html
+++ b/preprints.html
@@ -55,7 +55,7 @@
 
 
 <br><br>
-<a href="preprints/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of gravity equations</a>. Under revision for <i>Journal of Applied Econometrics</i>. (with Vincenzo Verardi)
+<a href="preprints/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. Resubmitted to <i>Journal of Applied Econometrics</i>. (with Vincenzo Verardi)
 
 [<a href="preprints/ivgravity/Stata ivgravity.zip">Stata implementation</a>]
 
