ET revision update

--- a/preprints.html
+++ b/preprints.html
@@ -64,7 +64,7 @@
 
 
 <br><br>
-<a href="preprints/noise/noise2019-09-10.pdf">Inference on a distribution from noisy draws</a>. Under revision for <i>Econometric Theory</i>. (with Martin Weidner)
+<a href="preprints/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. Resubmitted to <i>Econometric Theory</i>. (with Martin Weidner)
 
 
 <br><br>
