--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p class="view"><a href="publications.html">Publications</a></p>
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
-<p class="view"><a href="https://www.econ.cam.ac.uk/MiMo">ERC Starting Grant MiMo</a></p>
+<p class="view"><a href="erc.html">ERC Starting Grant MiMo</a></p>
 <p class="view"><a href="classes.html">Class notes</a></p>
 
 
