--- a/preprints.html
+++ b/preprints.html
@@ -51,6 +51,13 @@
 
 
 <p>
+<a href="preprints/blockmodel/blockmodel.pdf">Identification and estimation of stochastic blockmodels</a>. 
+[<a href="preprints/blockmodel/blockmodel_supplement.pdf">supplement</a>]
+
+<br><br>	
+<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. (with Ayden Higgins)
+
+<br><br>
 <a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. (with Ayden Higgins)
 
 <br><br>
@@ -62,15 +69,8 @@
 
 <br><br>
 <a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>.
-
 [<a href="preprints/rassign/exclusionbias appendix.pdf">supplement</a>,
 <a href="preprints/rassign/rassign.zip">Stata implementation and replication files</a>]
-
-
-<br><br>
-<a href="preprints/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. Resubmitted to <i>Journal of Applied Econometrics</i>. (with Vincenzo Verardi)
-
-[<a href="preprints/ivgravity/Stata ivgravity.zip">Stata implementation</a>]
 
 
 <br><br>
