--- a/publications.html
+++ b/publications.html
@@ -51,6 +51,10 @@
 
 
 <p>
+<a href="preprints/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <i>Journal of Applied Econometrics</i>, conditionally accepted. (with Vincenzo Verardi)
+[<a href="preprints/ivgravity/Stata ivgravity.zip">Stata implementation</a>]	
+
+<br><br>
 <a href="publications/many regressors/many regressors.pdf">Heteroskedasticity-robust inference in linear regression models with many covariates</a>.
 <i>Journal of the American Statistical Association</i>, forthcoming.
 
