--- a/classes.html
+++ b/classes.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Koen Jochmans | Class notes</title>
+    <title>Koen Jochmans | Some class notes</title>
 
  <link rel="stylesheet" href="styles.css">
 
@@ -86,12 +86,18 @@ Difference and differential equations, MRes Prep Class, University of Cambridge
 <br>
 <a href="class notes/Diff equations/slides.pdf">Lecture slides</a>
 
-
 <br><br>
-Nonlinear Models for Panel Data, PhD, University of Cambridge 
+Panel Data, M2 ETE, TSE
 
 <br>
-<a href="class notes/PhD30/slides.pdf">Lecture slides</a>
+<a href="class notes/M2 Econometrics 2/slides.pdf">Lecture slides</a>
+
+
+<br><br>
+Nonlinear Models for Panel Data, MRes, TSE
+
+<br>
+<a href="class notes/MRes Nonlinear panel data/slides1.pdf">Lecture slides</a>
 
 </p>
 
