--- a/preprints.html
+++ b/preprints.html
@@ -51,11 +51,14 @@
 
 
 <p>
-<a href="preprints/blockmodel/blockmodel.pdf">Identification and estimation of stochastic blockmodels</a>. 
-[<a href="preprints/blockmodel/blockmodel_supplement.pdf">supplement</a>]
+<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. (with Ayden Higgins)	
+[<a href="preprints/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>]
+	
+
 
 <br><br>	
-<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. (with Ayden Higgins)
+<a href="preprints/blockmodel/blockmodel.pdf">Identification and estimation of stochastic blockmodels</a>. 
+[<a href="preprints/blockmodel/blockmodel_supplement.pdf">supplement</a>]
 
 <br><br>
 <a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. (with Ayden Higgins)
