--- a/erc.html
+++ b/erc.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Koen Jochmans | Implementation</title>
+    <title>Koen Jochmans | MiMo</title>
 
  <link rel="stylesheet" href="styles.css">
 
@@ -43,7 +43,7 @@
 <p class="view"><a href="https://www.econ.cam.ac.uk/MiMo">ERC Starting Grant MiMo</a></p>
 -->
 <p class="view"><a href="erc.html">ERC Starting Grant MiMo</a></p>
-<p class="view"><a href="classes.html">Class notes</a></p>
+<p class="view"><a href="classes.html">Some class notes</a></p>
 
 
 </header>
@@ -52,31 +52,34 @@
 <p>&nbsp</p>
 
 
-<b> Inference in Microeconometric Model (MiMo) </b>
+<b> Inference in Microeconometric Models (MiMo) </b>
 <br>
 ERC Starting Grant 715787 (2017--2022)
 
 <br><br>
-<u>Synopsis </u>
-<br>
-<p align="justify", style="text-left:40px">
-Unobserved differences between economic agents are an important driver behind the differences in their economic outcomes such as schooling decisions, wages, and employment durations. Allowing for such unobserved heterogeneity in economic modelling equips the specification with an additional dimension of realism but presents major challenges for econometric practice. Hence, reconciling heterogeneity in the data with econometric models is an issue of utmost importance.
-<br><br>
-The aim of this project is to develop inference methods for models with unobserved heterogeneity by exploiting the identifying power of longitudinal (panel) data. The project consists of three Work Packages (WP). Together, they span the largest part of modern applications of panel data.
-<br><br>
-The first WP deals with inference on nonlinear models and enhances the performance of statistical hypothesis tests. So far, the literature has focused on point estimation. However, it is statistical inference that accounts for uncertainty in the data and forms the basis for testing economic restrictions. The second WP makes progress on the estimation of models for network data. The importance of social and economic connections is well established but few formal results are available. We exploit the fact that network data can be seen as a type of panel data to derive such results. The third WP uses panel data to identify and nonparametrically estimate dynamic discrete-choice models with unobserved type heterogeneity and/or latent state variables. Such results are inexistent even though dynamic discrete-choice models are a workhorse tool in labor economics and industrial organization.
-<br><br>
-The performance of the tools will be assessed theoretically and via simulation, and they will be applied to various empirical problems. Two examples of applications that we will study are the extensive margin of labor force participation and the determinants of the import and export behavior of firms and countries. We begin with a state-of-the-art and list main challenges in the existing literature. In Section b we proceed with a discussion on how the current project will address these challenges. For clarity, we deal with each of the three topics outlined above separately.
-</p>
 
+<p align="justify", style="text-left:40px"> Unobserved differences between economic agents
+are an important driver behind the differences in their economic outcomes such as schooling
+decisions, wages, and employment durations. Allowing for such unobserved heterogeneity in
+economic modelling equips the specification with an additional dimension of realism but
+presents major challenges for econometric practice. Hence, reconciling heterogeneity in the
+data with econometric models is an issue of utmost importance. <br><br> The aim of this
+project is to develop inference methods for models with unobserved heterogeneity by
+exploiting the identifying power of longitudinal (panel) data. The project consists of three
+Work Packages (WP). Together, they span the largest part of modern applications of panel
+data. <br><br> The first WP deals with inference on nonlinear models and enhances the
+performance of statistical hypothesis tests. So far, the literature has focused on point
+estimation. However, it is statistical inference that accounts for uncertainty in the data
+and forms the basis for testing economic restrictions. The second WP makes progress on the
+estimation of models for network data. The importance of social and economic connections is
+well established but few formal results are available. We exploit the fact that network data
+can be seen as a type of panel data to derive such results. The third WP uses panel data to
+identify and nonparametrically estimate dynamic discrete-choice models with unobserved type
+heterogeneity and/or latent state variables. Such results are inexistent even though dynamic
+discrete-choice models are a workhorse tool in labor economics and industrial organization.
+<br><br> The performance of the tools will be assessed theoretically and via simulation, and
+they will be applied to various empirical problems.</p>
 
-<u>Project members </u>
-<br>
-Ayden Higgins, 
-Sana Stephan,
-and
-Koen Jochmans
-<br><br>
 
 
 
