--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
 <p class="view"><a href="erc.html">ERC Starting Grant MiMo</a></p>
-<p class="view"><a href="classes.html">Class notes</a></p>
+<p class="view"><a href="classes.html">Some class notes</a></p>
 
 
 </header>
@@ -76,7 +76,13 @@ Email: koen [dot] jochmans [at] tse-fr [dot] eu
 <!-- ><p>I am ...</p> -->
 
 <br>
-<br>
+<p        align="justify",        style="text-left:40px">       Conference        on        <a
+href="https://www.tse-fr.eu/conferences/2022-conference-econometrics-modern-data-structures">Econometrics   for  Modern   Data  Structures</small></a>,   to   be  held   in  Toulouse   (<a
+href="https://www.tse-fr.eu">TSE</small></a>, Auditorium  3) on July 7-8,  2022. Attendance is
+free but registration is required.</p>
+
+
+
 
 
 </section>
