--- a/preprints.html
+++ b/preprints.html
@@ -40,7 +40,7 @@
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
 <p class="view"><a href="erc.html">ERC Starting Grant MiMo</a></p>
-<p class="view"><a href="classes.html">Class notes</a></p>
+<p class="view"><a href="classes.html">Some class notes</a></p>
 
 </header>
       
@@ -57,7 +57,7 @@
 
 
 <br><br>	
-<a href="preprints/blockmodel/blockmodel.pdf">Identification and estimation of stochastic blockmodels</a>. 
+<a href="preprints/blockmodel/blockmodel.pdf">Estimation and inference for stochastic block models</a>. 
 [<a href="preprints/blockmodel/blockmodel_supplement.pdf">supplement</a>]
 
 <br><br>
