--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
 <p class="view"><a href="erc.html">ERC Starting Grant MiMo</a></p>
-<p class="view"><a href="classes.html">Class notes</a></p>
+<p class="view"><a href="classes.html">Some class notes</a></p>
 
 </header>
       
@@ -51,19 +51,19 @@
 
 
 <p>
-<a href="preprints/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <i>Journal of Applied Econometrics</i>, conditionally accepted. (with Vincenzo Verardi)
-[<a href="preprints/ivgravity/Stata ivgravity.zip">Stata implementation</a>]	
+<a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <i>Journal of Applied Econometrics</i>, forthcoming. (with Vincenzo Verardi)
+[<a href="publications/ivgravity/Stata ivgravity.zip">Stata implementation</a>]	
 
 <br><br>
 <a href="publications/many regressors/many regressors.pdf">Heteroskedasticity-robust inference in linear regression models with many covariates</a>.
-<i>Journal of the American Statistical Association</i>, forthcoming.
+<i>Journal of the American Statistical Association</i> 117, 887--896.
 
 [<a href="publications/many regressors/many regressors supplement.pdf">supplement</a>,
 <a href="publications/many regressors/many regressors [replication].zip">replication files</a>]
 
 <br><br>
 <a href="publications/ivpoisson/ivpoisson.pdf">Bias in instrumental-variable estimators of fixed-effect models for count data</a>.
-<i>Economics Letters</i>, forthcoming.
+<i>Economics Letters</i> 212, 110318.
 
 <br><br>
 <a href="publications/portmanteau/serial correlation.pdf">A portmanteau test for correlation in short panels</a>.
@@ -102,7 +102,7 @@
 <a href="publications/network formation/logit 2nd revision.pdf">Semiparametric analysis of network formation</a>.
 <i>Journal of Business & Economic Statistics</i> 36, 705–713.
 
-[<a href="publications/network formation/Replication JBES.pdf">replication files</a>]
+[<a href="publications/network formation/Replication JBES.zip">replication files</a>]
 
 <br><br>
 <a href="publications/nonexchangeable mixtures/JOE_update.pdf">Nonparametric estimation of non-exchangeable latent-variable models</a>.
