--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@ Email: koen [dot] jochmans [at] tse-fr [dot] eu
 
 <br>
 <p        align="justify",        style="text-left:40px">       Conference        on        <a
-href="https://www.tse-fr.eu/conferences/2022-conference-econometrics-modern-data-structures">Econometrics   for  Modern   Data  Structures</small></a>,   to   be  held   in  Toulouse   (<a
+href="https://www.tse-fr.eu/conferences/2022-conference-econometrics-modern-data-structures">Econometrics for Modern Data Structures</small></a>, to be held in Toulouse   (<a
 href="https://www.tse-fr.eu">TSE</small></a>, Auditorium  3) on July 7-8,  2022. Attendance is
-free but registration is required.</p>
+free but registration is required. The program is <a href="https://www.tse-fr.eu/sites/default/files/TSE/documents/conf/2022/program_econometric_2022.pdf">here</small></a>.</p>
+
+
+
 
 
 
