--- a/erc.html
+++ b/erc.html
@@ -43,6 +43,7 @@
 <p class="view"><a href="https://www.econ.cam.ac.uk/MiMo">ERC Starting Grant MiMo</a></p>
 -->
 <p class="view"><a href="erc.html">ERC Starting Grant MiMo</a></p>
+<p class="view"><a href="erc2.html">ERC Consolidator Grant NETWORK</a></p>
 <p class="view"><a href="classes.html">Some class notes</a></p>
 
 
@@ -80,17 +81,100 @@ discrete-choice models are a workhorse tool in labor economics and industrial or
 <br><br> The performance of the tools will be assessed theoretically and via simulation, and
 they will be applied to various empirical problems.</p>
 
+<b> Research output </b>
+
+<p> 
+A. Higgins and K. Jochmans. 
+<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Preprint. 2022.
+</p> 
+
+<p> 	
+A. Higgins and K. Jochmans. 
+<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. Preprint, 2021.
+</p> 
+	
+<p> 
+A. Higgins and K. Jochmans. 
+<a href="preprints/AJADE/JASYD.pdf">Joint approximate asymmetric diagonalization by non-orthogonal matrices</a>. Preprint, 2021.
+</p> 
+
+<p> 
+A. Higgins.
+<a href="https://ahiggins.co.uk/assets/pdf/FTIFE/FTIFE.pdf">Fixed-<i>T</i> estimation of linear panel data models with interactive fixed effects</a>. Preprint, 2021.
+</p> 
+	
+	
+<p> 
+K. Jochmans. 
+<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. Preprint, 2020.
+</p> 
+	
+<p> 
+K. Jochmans. 
+<a href="preprints/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. Preprint, 2018.
+</p> 
+
+<p>  
+K. Jochmans and M. Weidner. <a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. Forthcoming in <i>Econometric Theory</i>, 2022+.
+</p> 
+	
+<p> 
+K. Jochmans and V. Verardi. <a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. Forthcoming in <i>Journal of Applied Econometrics</i>, 2022+.
+</p> 
+	
+<p> 
+K. Jochmans. <a href="publications/many regressors/many regressors.pdf">Heteroskedasticity-robust inference in linear regression models with many covariates</a>. <i>Journal of the American Statistical Association</i> 117, 887–896.
+</p> 
+	
+<p> 	
+K. Jochmans. <a href="publications/ivpoisson/ivpoisson.pdf">Bias in instrumental-variable estimators of fixed-effect models for count data</a>. <i>Economics Letters</i> 212, 110318.
+</p> 
+	
+<p> 
+K. Jochmans. <a href="publications/portmanteau/serial correlation.pdf">A portmanteau test for correlation in short panels</a>. <i>Econometric Theory</i> 36, 1159–1166.
+</p> 
+	
+<p> 
+K. Jochmans. <a href="publications/error components/cluster.pdf">Testing for correlation in error-component models</a>. <i>Journal of Applied Econometrics</i> 35, 860–878.
+</p> 
+	
+<p> 
+K. Jochmans and V. Verardi. <a href="publications/twgravity/twexp_twgravity - stata.pdf">twexp and twgravity: Fitting exponential regression models with two-way fixed effects</a>. <i>Stata Journal</i> 20, 468–480. 
+</p> 
+	
+<p> 
+K. Jochmans and V. Verardi. <a href="publications/xtserialpm/xtserialpm - stata.pdf">xtserialpm: A portmanteau test for serial correlation in a linear panel model</a>. <i>Stata Journal</i> 20, 149–161.
+</p> 
+	
+<p> 
+K. Jochmans and M. Weidner. <a href="publications/network regressions/graphs revision.pdf">Fixed-effect regressions on network data</a>. <i>Econometrica</i> 87, 1543–1560.
+</p> 
+	
+<p> 
+K. Jochmans and T. Otsu. <a href="publications/two-way likelihood corrections/likelihoodcorrection.pdf">Likelihood corrections for two-way models</a>. <i>Annals of Economics and Statistics</i> 134, 227–242.
+</p> 
+	
+<p> 
+K. Jochmans. <a href="publications/network formation/logit 2nd revision.pdf">Semiparametric analysis of network formation</a>. <i>Journal of Business & Economic Statistics</i> 36, 705–713.
+</p> 
+	
+<p> 
+S. Bonhomme, K. Jochmans, and J.-M. Robin. <a href="publications/nonexchangeable mixtures/JOE_update.pdf">Nonparametric estimation of non-exchangeable latent-variable models</a>. <i>Journal of Econometrics</i> 201, 237–248.
+</p> 
+	
+<p> 
+K. Jochmans and T. Magnac. <a href="publications/sufficiency/sufficiency revision.pdf">A note on sufficiency in binary panel models</a>. <i>Econometrics Journal</i> 20, 259–269.
+</p> 
 
 
 
 
+<b> Events </b>
 
-
+<br> <p align="justify", style="text-left:40px"> Conference on <a href="https://www.tse-fr.eu/conferences/2022-conference-econometrics-modern-data-structures">Econometric Methods for Modern Data Structures</small></a>, July 7-8, 2022. The program is <a href="https://www.tse-fr.eu/sites/default/files/TSE/documents/conf/2022/program_econometric_2022.pdf">here</small></a>.</p>
 
 </section>
-      
-
 
 </body>
-  
+
 </html>
