--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,7 @@
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
 <p class="view"><a href="erc.html">ERC Starting Grant MiMo</a></p>
+<p class="view"><a href="erc2.html">ERC Consolidator Grant NETWORK</a></p>
 <p class="view"><a href="classes.html">Some class notes</a></p>
 
 </header>
@@ -51,12 +52,15 @@
 
 
 <p>
+<a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i>, forthcoming. (with Martin Weidner)
+	
+<br><br>	
 <a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <i>Journal of Applied Econometrics</i>, forthcoming. (with Vincenzo Verardi)
 [<a href="publications/ivgravity/Stata ivgravity.zip">Stata implementation</a>]	
 
 <br><br>
 <a href="publications/many regressors/many regressors.pdf">Heteroskedasticity-robust inference in linear regression models with many covariates</a>.
-<i>Journal of the American Statistical Association</i> 117, 887--896.
+<i>Journal of the American Statistical Association</i> 117, 887–896.
 
 [<a href="publications/many regressors/many regressors supplement.pdf">supplement</a>,
 <a href="publications/many regressors/many regressors [replication].zip">replication files</a>]
