--- a/classes.html
+++ b/classes.html
@@ -40,6 +40,7 @@
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
 <p class="view"><a href="erc.html">ERC Starting Grant MiMo</a></p>
+<p class="view"><a href="erc2.html">ERC Consolidator Grant NETWORK</a></p>
 <p class="view"><a href="classes.html">Some class notes</a></p>
 
 </header>
