--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
 <p class="view"><a href="erc.html">ERC Starting Grant MiMo</a></p>
+<p class="view"><a href="erc2.html">ERC Consolidator Grant NETWORK</a></p>
 <p class="view"><a href="classes.html">Some class notes</a></p>
 
 
@@ -53,33 +54,29 @@
 	
 <p>&nbsp</p>
 
-<table width="80%" cellspacing="0" cellpadding="0">
-<tr>
-<td class="text">
-<img align="left" src="jochmans.jpg" alt="Koen Jochmans" width="180" height="180">
-</td>
-<td class="text">
+
+<p>
+<img align="left" src="jochmans.jpg" alt="Koen Jochmans" width="170" height="165" hspace="30">
+
+
 Toulouse School of Economics <br>
 1 esplanade de l'Université <br>
 31080 Toulouse CEDEX 6 <br>
 France	
 
-<br><br><br>
+<br><br>
 Office: T.528 <br>
 Tel: +33 (0)5 61 12 88 78 <br>
 Email: koen [dot] jochmans [at] tse-fr [dot] eu 
-<br>
-</td>
-</tr>
-</table>
+</p>
+
+<p>
+<img align="left" src="tselogo.jpg" alt="TSE" width="220" height="150">
+<img align="right" src="erclogo.jpg" alt="TSE" width="220" height="140">
+</p>
+
 
 <!-- ><p>I am ...</p> -->
-
-<br>
-<p        align="justify",        style="text-left:40px">       Conference        on        <a
-href="https://www.tse-fr.eu/conferences/2022-conference-econometrics-modern-data-structures">Econometrics for Modern Data Structures</small></a>, to be held in Toulouse   (<a
-href="https://www.tse-fr.eu">TSE</small></a>, Auditorium  3) on July 7-8,  2022. Attendance is
-free but registration is required. The program is <a href="https://www.tse-fr.eu/sites/default/files/TSE/documents/conf/2022/program_econometric_2022.pdf">here</small></a>.</p>
 
 
 
