--- a/preprints.html
+++ b/preprints.html
@@ -40,6 +40,7 @@
 <p class="view"><a href="preprints.html">Preprints</a></p>
 <p class="view"><a href="implementation.html">Stata implementations</a></p>
 <p class="view"><a href="erc.html">ERC Starting Grant MiMo</a></p>
+<p class="view"><a href="erc2.html">ERC Consolidator Grant NETWORK</a></p>
 <p class="view"><a href="classes.html">Some class notes</a></p>
 
 </header>
@@ -74,11 +75,6 @@
 <a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>.
 [<a href="preprints/rassign/exclusionbias appendix.pdf">supplement</a>,
 <a href="preprints/rassign/rassign.zip">Stata implementation and replication files</a>]
-
-
-<br><br>
-<a href="preprints/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. Resubmitted to <i>Econometric Theory</i>. (with Martin Weidner)
-
 
 <br><br>
 <a href="preprints/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>.
