--- a/erc.html
+++ b/erc.html
@@ -167,6 +167,29 @@ K. Jochmans and T. Magnac. <a href="publications/sufficiency/sufficiency revisio
 </p> 
 
 
+<b> Stata modules </b>
+(co-written with Vincenzo Verardi.)
+
+<br><br>
+
+<p>
+Peer effects: 
+<a href="https://ideas.repec.org/c/boc/bocode/s458754.html">rassign</a>, 
+<a href="preprints/peer effects/ivnet.zip">ivnet</a>.
+</p> 
+
+<p> 
+Testing in panel data:
+<a href="https://ideas.repec.org/c/boc/bocode/s458642.html">xtserialpm</a>.
+</p> 
+
+<p> 
+Estimation of two-way models:
+<a href="https://ideas.repec.org/c/boc/bocode/s458641.html">twexp</a>, 
+<a href="https://ideas.repec.org/c/boc/bocode/s458640.html">twgravity</a>, 
+<a href="https://ideas.repec.org/c/boc/bocode/s458698.html">ivgravity</a>.
+</p> 
+
 
 
 <b> Events </b>
