--- a/preprints.html
+++ b/preprints.html
@@ -55,8 +55,6 @@
 <a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. (with Ayden Higgins)	
 [<a href="preprints/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>]
 	
-
-
 <br><br>	
 <a href="preprints/blockmodel/blockmodel.pdf">Estimation and inference for stochastic block models</a>. 
 [<a href="preprints/blockmodel/blockmodel_supplement.pdf">supplement</a>]
@@ -68,8 +66,7 @@
 <a href="preprints/AJADE/JASYD.pdf">Joint approximate asymmetric diagonalization by non-orthogonal matrices</a>. (with Ayden Higgins)
 
 <br><br>
-<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. Under revision for <i>Journal of Econometrics</i>. [<a href="preprints/peer effects/matlab.zip">replication files</a>, <a href="preprints/peer effects/ivnet.zip">Stata implementation</a>, <a href="preprints/peer effects/DGP.do">dgp.do for Stata help file</a>]
-
+<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. Resubmitted to <i>Journal of Econometrics</i>. [<a href="preprints/peer effects/matlab.zip">replication files</a>, <a href="preprints/peer effects/ivnet.zip">Stata implementation</a>, <a href="preprints/peer effects/DGP.do">dgp.do for Stata help file</a>]
 
 <br><br>
 <a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>.
@@ -78,7 +75,6 @@
 
 <br><br>
 <a href="preprints/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>.
-
 
 <br><br>
 <a href="preprints/score adjustments/Dhaene-Jochmans adjscore.pdf">Profile-score adjustments for incidental-parameter problems</a>. (with Geert Dhaene)
