--- a/erc.html
+++ b/erc.html
@@ -102,7 +102,13 @@ A. Higgins and K. Jochmans.
 A. Higgins.
 <a href="https://ahiggins.co.uk/assets/pdf/FTIFE/FTIFE.pdf">Fixed-<i>T</i> estimation of linear panel data models with interactive fixed effects</a>. Preprint, 2021.
 </p> 
-	
+
+
+<p> 
+K. Jochmans
+<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. Preprint, 2020.
+</p>
+
 	
 <p> 
 K. Jochmans. 
