--- a/index.html
+++ b/index.html
@@ -83,10 +83,20 @@ Email: koen [dot] jochmans [at] tse-fr [dot] eu
 
 
 
+</section>
+      
+<section>
+	
+<p> 
+	A two-day conference on `Estimation and Inference in Econometric Models' will be held in Toulouse on December 12-13, 2022.
+</p>
+<p>	
+	The event is sponsored by TSE and CeMMAP and is made possible through funding by the ERC. Information and updates can be found <a href="https://www.tse-fr.eu/conferences/2022-conference-estimation-and-inference-econometric-models">here</a>. Attendance is free but registration is required. 
+</p> 
 
 
 </section>
-      
+
 
 
 </body>
