--- a/erc.html
+++ b/erc.html
@@ -85,6 +85,11 @@ they will be applied to various empirical problems.</p>
 
 <p> 
 A. Higgins and K. Jochmans. 
+<a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. Preprint 2022.
+</p> 
+
+<p> 
+A. Higgins and K. Jochmans. 
 <a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Preprint. 2022.
 </p> 
 
@@ -99,25 +104,13 @@ A. Higgins and K. Jochmans.
 </p> 
 
 <p> 
-A. Higgins.
-<a href="https://ahiggins.co.uk/assets/pdf/FTIFE/FTIFE.pdf">Fixed-<i>T</i> estimation of linear panel data models with interactive fixed effects</a>. Preprint, 2021.
-</p> 
-
-
-<p> 
 K. Jochmans
-<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. Preprint, 2020.
+<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. Forthcoming in <i>Journal of Econometrics</i>, 2022+.
 </p>
 
-	
 <p> 
-K. Jochmans. 
-<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. Preprint, 2020.
-</p> 
-	
-<p> 
-K. Jochmans. 
-<a href="preprints/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. Preprint, 2018.
+A. Higgins.
+<a href="https://ahiggins.co.uk/assets/pdf/FTIFE/FTIFE.pdf">Fixed-<i>T</i> estimation of linear panel data models with interactive fixed effects</a>. Preprint, 2021.
 </p> 
 
 <p>  
@@ -135,7 +128,12 @@ K. Jochmans. <a href="publications/many regressors/many regressors.pdf">Heterosk
 <p> 	
 K. Jochmans. <a href="publications/ivpoisson/ivpoisson.pdf">Bias in instrumental-variable estimators of fixed-effect models for count data</a>. <i>Economics Letters</i> 212, 110318.
 </p> 
-	
+
+<p> 
+K. Jochmans. 
+<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. Preprint, 2020.
+</p> 
+		
 <p> 
 K. Jochmans. <a href="publications/portmanteau/serial correlation.pdf">A portmanteau test for correlation in short panels</a>. <i>Econometric Theory</i> 36, 1159–1166.
 </p> 
@@ -158,6 +156,11 @@ K. Jochmans and M. Weidner. <a href="publications/network regressions/graphs rev
 	
 <p> 
 K. Jochmans and T. Otsu. <a href="publications/two-way likelihood corrections/likelihoodcorrection.pdf">Likelihood corrections for two-way models</a>. <i>Annals of Economics and Statistics</i> 134, 227–242.
+</p> 
+
+<p> 
+K. Jochmans. 
+<a href="preprints/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>. Preprint, 2018.
 </p> 
 	
 <p> 
@@ -200,7 +203,12 @@ Estimation of two-way models:
 
 <b> Events </b>
 
-<br> <p align="justify", style="text-left:40px"> Conference on <a href="https://www.tse-fr.eu/conferences/2022-conference-econometrics-modern-data-structures">Econometric Methods for Modern Data Structures</small></a>, July 7-8, 2022. The program is <a href="https://www.tse-fr.eu/sites/default/files/TSE/documents/conf/2022/program_econometric_2022.pdf">here</small></a>.</p>
+<br> 
+<p align="justify", style="text-left:40px"> Conference on <a href="https://www.tse-fr.eu/conferences/2022-conference-econometrics-modern-data-structures">Econometric Methods for Modern Data Structures</small></a>, July 7-8, 2022. The program is <a href="https://www.tse-fr.eu/sites/default/files/TSE/documents/conf/2022/program_econometric_2022.pdf">here</small></a>.
+</p>
+
+
+<p align="justify", style="text-left:40px"> Conference on <a href="https://www.tse-fr.eu/conferences/2022-conference-estimation-and-inference-econometric-models">Estimation and Inference in Econometric Models</small></a>, December 12-13, 2022.</p>
 
 </section>
 
