--- a/preprints.html
+++ b/preprints.html
@@ -52,6 +52,10 @@
 
 
 <p>
+
+<a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. (with Ayden Higgins)
+
+<br><br>
 <a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. (with Ayden Higgins)	
 [<a href="preprints/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>]
 	
@@ -60,16 +64,14 @@
 [<a href="preprints/blockmodel/blockmodel_supplement.pdf">supplement</a>]
 
 <br><br>
-<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. (with Ayden Higgins)
+<a href="preprints/markov/dynamics.pdf">Identification of mixtures of dynamic discrete choices</a>. Under revision for <i>Journal of Econometrics</i>. (with Ayden Higgins)
 
 <br><br>
 <a href="preprints/AJADE/JASYD.pdf">Joint approximate asymmetric diagonalization by non-orthogonal matrices</a>. (with Ayden Higgins)
 
-<br><br>
-<a href="preprints/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. Resubmitted to <i>Journal of Econometrics</i>. [<a href="preprints/peer effects/matlab.zip">replication files</a>, <a href="preprints/peer effects/ivnet.zip">Stata implementation</a>, <a href="preprints/peer effects/DGP.do">dgp.do for Stata help file</a>]
 
 <br><br>
-<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>.
+<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. Resubmitted to <i>Journal of Applied Econometrics</i>.
 [<a href="preprints/rassign/exclusionbias appendix.pdf">supplement</a>,
 <a href="preprints/rassign/rassign.zip">Stata implementation and replication files</a>]
 
