--- a/publications.html
+++ b/publications.html
@@ -52,8 +52,12 @@
 
 
 <p>
-<a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i>, forthcoming. (with Martin Weidner)
 	
+<a href="publications/peer effects/interference.pdf">Peer effects and endogenous social interactions</a>. <i>Journal of Econometrics</i>, forthcoming. [<a href="publications/peer effects/matlab.zip">replication files</a>, <a href="publications/peer effects/ivnet.zip">Stata implementation</a>, <a href="publications/peer effects/DGP.do">dgp.do for Stata help file</a>]
+
+<br><br>	
+<a href="publications/noise/noise_revision.pdf">Inference on a distribution from noisy draws</a>. <i>Econometric Theory</i>, forthcoming. (with Martin Weidner)
+			
 <br><br>	
 <a href="publications/ivgravity/twgravityiv.pdf">Instrumental-variable estimation of exponential regression models with two-way fixed effects, with an application to gravity equations</a>. <i>Journal of Applied Econometrics</i>, forthcoming. (with Vincenzo Verardi)
 [<a href="publications/ivgravity/Stata ivgravity.zip">Stata implementation</a>]	
