--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
 <p>
-<img align="left" src="jochmans.jpg" alt="Koen Jochmans" width="170" height="165" hspace="30">
+<img align="right" src="jochmans.jpg" alt="Koen Jochmans" width="170" height="165" hspace="30">
 
 
 Toulouse School of Economics <br>
@@ -67,12 +67,12 @@ France
 <br><br>
 Office: T.528 <br>
 Tel: +33 (0)5 61 12 88 78 <br>
-Email: koen [dot] jochmans [at] tse-fr [dot] eu 
+Email: koen [dot] jochmans [at] tse-fr [dot] eu        
 </p>
 
 <p>
-<img align="left" src="tselogo.jpg" alt="TSE" width="220" height="150">
-<img align="right" src="erclogo.jpg" alt="TSE" width="220" height="140">
+<img align="left" src="tselogo.jpg" alt="TSE" width="220" height="130">
+<img align="right" src="erclogo.jpg" alt="ERC" width="220" height="130">
 </p>
 
 
