--- a/preprints.html
+++ b/preprints.html
@@ -56,7 +56,7 @@
 <a href="preprints/markov/markov switching.pdf">Learning Markov processes with latent variables from longitudinal data</a>. (with Ayden Higgins)
 
 <br><br>
-<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. (with Ayden Higgins)	
+<a href="preprints/panel bootstrap/panel_bstrap.pdf">Bootstrap inference for fixed-effect models</a>. Under revision for <i>Econometrica</i>. (with Ayden Higgins)	
 [<a href="preprints/panel bootstrap/panel_bstrap_supplement.pdf">supplement</a>]
 	
 <br><br>	
@@ -68,12 +68,6 @@
 
 <br><br>
 <a href="preprints/AJADE/JASYD.pdf">Joint approximate asymmetric diagonalization by non-orthogonal matrices</a>. (with Ayden Higgins)
-
-
-<br><br>
-<a href="preprints/rassign/exclusionbias.pdf">Testing random assignment to peer groups</a>. Resubmitted to <i>Journal of Applied Econometrics</i>.
-[<a href="preprints/rassign/exclusionbias appendix.pdf">supplement</a>,
-<a href="preprints/rassign/rassign.zip">Stata implementation and replication files</a>]
 
 <br><br>
 <a href="preprints/dyadic/beta_model.pdf">Modified-likelihood estimation of fixed-effect models for dyadic data</a>.
